--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         run: echo Hello, world!!!
 
       - name: Upload SARIF to Github using the upload-sarif action
-        uses: github/codeql-action/upload-sarif@41a4ada31ba866a7f1196b9602703a89edd69e22 # tag=v2
+        uses: github/codeql-action/upload-sarif@v2 # tag=v2
         if: ${{ always() }}
         with:
           sarif_file: build/detekt-report.sarif
